testing/tests/ui/block_in_filter_block.stderr
error: cannot have a block inside a filter block
 --> BlockInFilter.html:7:10
       " block title %}New title{% endblock %}\n        a b\n    {% endfilter %}\n{%- endbl"...
  --> tests/ui/block_in_filter_block.rs:5:14
   |
5  |       source = r#"{% extends "html-base.html" %}
   |  ______________^
6  | |
7  | | {%- block body -%}
8  | |     <h1>Metadata</h1>
...  |
14 | | {%- endblock body %}
15 | | "#,
   | |__^
